# HMI

./: .gitignore  AlertPanel.qml  CMakeLists.txt  ExcavatorVisualizer.qml  Main.qml  README.md  TelemetryPanel.qml  canbusdatasource.cpp  canbusdatasource.h  config.json  config.prod.json  configmanager.cpp  configmanager.h  excavatorcontroller.cpp  excavatorcontroller.h  excavatordatasource.h  main.cpp  sample01.qrc  sqlservice.cpp  sqlservice.h  udpdatasource.cpp  udpdatasource.h
python/: emulator_can_windows.py  simulador_excavadora.py
